--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "rethinkdb-backup",
-  "version": "1.0.0",
-  "description": "A Clojure library designed to ... well, that part is up to you.",
+  "name": "rethink-backup",
+  "version": "0.2.0",
+  "description": "rethinkdb backups to s3",
   "main": "index.js",
   "directories": {
     "doc": "doc",
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo no"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Brian Hurlow",
+  "license": "MIT",
   "dependencies": {
     "dateformat": "^1.0.12",
-    "knox": "^0.9.2"
+    "knox": "^0.9.2",
+    "rethinkdb": "^2.2.2"
   }
 }
